user profile setup working

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,27 @@
-# Environment Variables for Fitness Training App
+# Environment Configuration Template
 # Copy this file to .env and fill in your actual values
+# DO NOT commit .env to version control!
 
-# ChatGPT API Key (Required)
-# Get your API key from: https://platform.openai.com/api-keys
-CHATGPT_API_KEY=your_chatgpt_api_key_here
+# OpenAI API Configuration
+CHATGPT_API_KEY=your_openai_api_key_here
 
-# N8N Webhook URL (Optional)
-# If you have an N8N workflow for additional AI processing
+# n8n Workflow Configuration (Optional)
 N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/workout-plan
+N8N_API_KEY=your_n8n_api_key_here
 
-# Additional Configuration (Optional)
-# CHATGPT_MODEL=gpt-4
-# CHATGPT_MAX_TOKENS=2000
-# CHATGPT_TEMPERATURE=0.7
+# Firebase Configuration (Optional - usually handled by firebase_options.dart)
+# FIREBASE_PROJECT_ID=your-firebase-project-id
+# FIREBASE_API_KEY=your-firebase-api-key
+
+# Development Settings
+DEBUG_MODE=true
+LOG_LEVEL=info
+
+# App Configuration
+APP_NAME=Fitness Training App
+APP_VERSION=1.0.0
+
+# Feature Flags
+ENABLE_ANALYTICS=true
+ENABLE_CRASHLYTICS=true
+ENABLE_PUSH_NOTIFICATIONS=true
