task 8 with no errors

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,4 +91,6 @@ flutter:
   assets:
     - assets/images/
     - assets/animations/
+    - assets/animations/celebrations/
+    - assets/animations/exercises/
     - assets/lottie/
