working with no  errors

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   # UI & Icons
   cupertino_icons: ^1.0.8
+  fl_chart: ^0.69.0
 
   # State Management
   flutter_riverpod: ^2.5.1
